[package]
name = "jp2view"
version = "0.1.0"
edition = "2021"

[dependencies]
openjp2 = { version = "0.5.3", path = "../../openjp2/openjp2-rs" }

objc2 = { version = "0.6" }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSAutoreleasePool"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSButton", "NSImageView", "NSImage", "objc2-uniform-type-identifiers"] }
objc2-uniform-type-identifiers = "0.3"
urlencoding = "2.1.0"
